ajustes realizados en la tarea N1 replica de pg.web1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet"  href="style.css">
 </head>
 <body>
+    <header class="header">
+        <div class="logo">
+       <img src="imagenes-Ejercicios para practicar - RW/PHOTO-2023-12-28-20-21-41.jpg" alt="Tacats" width="1300" height="300">
+        </div>
+    </header>
+        <nav class="navbar">
+            <div class="menu-buttons">
+                <a href="#" class="inicio-btn">Inicio</a>
+                <a href="#" class="sobreNosotros-btn">Sobre Nosotros</a>
+                <a href="#" class="servicios-btn">Servicios</a>
+                <a href="#" class="contacto-btn">Contacto</a>
+                    </ul>
+        </nav>
     
+    <section class="parrafo">
+        <p>¡Bienvenido a Tacats, el lugar perfecto para el cuidado y el estilo de tus queridas mascotas! En Tacats, entendemos que tus amigos peludos son parte de tu familia, y nos dedicamos a ofrecer servicios de peluquería canina y felina que van más allá de la estética, brindando amor, comodidad y cuidado excepcional.
+            En Tacats, nos enorgullece trabajar con cada cliente de manera personalizada, adaptando nuestros servicios a las necesidades únicas de cada mascota. Ya sea un corte de pelo moderno, un baño relajante o un tratamiento de spa, estamos comprometidos a proporcionar el más alto nivel de cuidado y atención.</p>
+    <div class="imagenes">
+        <img src="imagenes-Ejercicios para practicar - RW/IMG_5471.jpeg" alt="imagenes">
+        <img src="imagenes-Ejercicios para practicar - RW/PHOTO-2023-12-01-13-23-38LOGO.jpg" alt="imagenes">
+        <img src="imagenes-Ejercicios para practicar - RW/IMG_5472.jpeg" alt="imagenes">
+    </div>
+        </section>
+    
+
+    </section>
 </body>
 </html>
